unpackaged/main/default/objects/Merchant_Diagnostic__c/Merchant_Diagnostic__c.object-meta.xml
<CustomObject>
    <label>Merchant Diagnostic</label>
    <nameField>
        <label>Merchant Diagnostic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Diagnostics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>