unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <label>Additional Induction Material Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>