unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Any_Stages_That_Disrupt_POS_ProcessR__c.field-meta.xml
<CustomField>
    <fullName>Any_Stages_That_Disrupt_POS_ProcessR__c</fullName>
    <formula>IF(TEXT( Stages_That_Disrupt_POS_Process__c ) = &quot;Yes&quot;, 1,
IF(TEXT( Stages_That_Disrupt_POS_Process__c ) = &quot;No&quot;, 5, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Any Stages That Disrupt POS Process?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>