unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Challenges_with_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Challenges_with_Tax_Free__c</fullName>
    <inlineHelpText>Are there any other challenges with Tax Free? 5 means no other challenges, 1 a lot of challenges.</inlineHelpText>
    <label>Challenges with Tax Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>