unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Challenges_with_Tax_FreeR__c.field-meta.xml
<CustomField>
    <fullName>Challenges_with_Tax_FreeR__c</fullName>
    <formula>VALUE(TEXT(Challenges_with_Tax_Free__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenges with Tax Free?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>