unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Collateral_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Delivery__c</fullName>
    <label>Collateral Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locally (To Stores)</fullName>
            </value>
            <value>
                <fullName>Centrally (Distributed by Merchant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>