unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Collateral_Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Delivery_Frequency__c</fullName>
    <label>Collateral Delivery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Schedule</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other (Seasonally/High Peak)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>