unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Confident_of_Staff_TF_Training__c.field-meta.xml
<CustomField>
    <fullName>Confident_of_Staff_TF_Training__c</fullName>
    <inlineHelpText>How confident are you in your staff&#39;s level of TF training? 5 equals very confident, 1 not confident at all.</inlineHelpText>
    <label>Confident of Staff TF Training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>