unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Confident_of_Staff_TF_TrainingR__c.field-meta.xml
<CustomField>
    <fullName>Confident_of_Staff_TF_TrainingR__c</fullName>
    <formula>VALUE(TEXT(Confident_of_Staff_TF_Training__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confident of Staff TF Training?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>