unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Confident_Offering_Tax_Free_Shopping__c.field-meta.xml
<CustomField>
    <fullName>Confident_Offering_Tax_Free_Shopping__c</fullName>
    <inlineHelpText>Are you confident offering Tax Free shopping to your customers? 5 means very confident, 1 not confident at all.</inlineHelpText>
    <label>Confident Offering Tax Free Shopping?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>