unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Confident_Offering_Tax_Free_ShoppingR__c.field-meta.xml
<CustomField>
    <fullName>Confident_Offering_Tax_Free_ShoppingR__c</fullName>
    <formula>VALUE(TEXT( Confident_Offering_Tax_Free_Shopping__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confident Offering Tax Free Shopping?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>