unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Considered_Planet_s_Marketing_Offering__c.field-meta.xml
<CustomField>
    <fullName>Considered_Planet_s_Marketing_Offering__c</fullName>
    <inlineHelpText>5 means will take Planet&#39;s marketing offering, 1 not considered.</inlineHelpText>
    <label>Considered Planet&#39;s Marketing Offering?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>