unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Considered_Planet_s_Marketing_OfferingR__c.field-meta.xml
<CustomField>
    <fullName>Considered_Planet_s_Marketing_OfferingR__c</fullName>
    <formula>VALUE(TEXT( Considered_Planet_s_Marketing_Offering__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Considered Planet&#39;s Marketing Offering?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>