unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Merchant Diagnostics</relationshipLabel>
    <relationshipName>Merchant_Diagnostics</relationshipName>
    <type>Lookup</type>
</CustomField>