unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Current_Annual_SiS__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_SiS__c</fullName>
    <label>Current Annual SiS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>