unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Delivered_on_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Delivered_on_Commitment__c</fullName>
    <inlineHelpText>At Planet, we are committed to providing you and your international customers with a frictionless tax free experience.  Have we delivered on our commitment? 5 being the best, 1 the worst.</inlineHelpText>
    <label>Delivered on Commitment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>