unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Delivered_on_CommitmentR__c.field-meta.xml
<CustomField>
    <fullName>Delivered_on_CommitmentR__c</fullName>
    <formula>VALUE(TEXT( Delivered_on_Commitment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered on Commitment?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>