unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Do_You_Use_This_Information__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Use_This_Information__c</fullName>
    <inlineHelpText>5 means used very often, 1 not used at all.</inlineHelpText>
    <label>Do You Use This Information?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>