unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Do_You_Use_This_InformationR__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Use_This_InformationR__c</fullName>
    <formula>VALUE(TEXT( Do_You_Use_This_Information__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do You Use This Information?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>