unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Ease_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Use__c</fullName>
    <inlineHelpText>How would you rate our tax free solution in terms of ease of use? 5 very easy, 1 not easy at all.</inlineHelpText>
    <label>Ease of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>