unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Ease_of_UseR__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_UseR__c</fullName>
    <formula>VALUE(TEXT(Ease_of_Use__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ease of Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>