unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Face_to_Face_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face_Meetings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Face to Face Meetings</label>
    <type>Checkbox</type>
</CustomField>