unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Gaps_in_the_Information_Provided__c.field-meta.xml
<CustomField>
    <fullName>Gaps_in_the_Information_Provided__c</fullName>
    <inlineHelpText>5 means no gaps, 1 means a lot of gaps.</inlineHelpText>
    <label>Gaps in the Information Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>