unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Gaps_in_the_Information_ProvidedR__c.field-meta.xml
<CustomField>
    <fullName>Gaps_in_the_Information_ProvidedR__c</fullName>
    <formula>VALUE(TEXT( Gaps_in_the_Information_Provided__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gaps in the Information Provided?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>