unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Head_Office_Experience_ScoreR__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Experience_ScoreR__c</fullName>
    <label>Head Office Experience ScoreR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>