unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Head_Office_Experience_Value__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Experience_Value__c</fullName>
    <formula>IF(AND(Head_Office_Experience_ScoreR__c &gt; 0, Head_Office_Experience_ScoreR__c  &lt;=  25), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,25, 25), 
IF(AND(Head_Office_Experience_ScoreR__c &gt; 25, Head_Office_Experience_ScoreR__c &lt;= 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,25, 25), 
IF(Head_Office_Experience_ScoreR__c &gt; 50, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,25, 25), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZuOI&quot;, &quot;No Status&quot;, 25, 25))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Experience Value</label>
    <type>Text</type>
</CustomField>