unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Innovative_is_Our_Solution__c.field-meta.xml
<CustomField>
    <fullName>How_Innovative_is_Our_Solution__c</fullName>
    <inlineHelpText>In your opinion how innovative is our solution? 5 is very innovative and 1 is not innovative at all.</inlineHelpText>
    <label>How Innovative is Our Solution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>