unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Innovative_is_Our_SolutionR__c.field-meta.xml
<CustomField>
    <fullName>How_Innovative_is_Our_SolutionR__c</fullName>
    <formula>VALUE(TEXT(How_Innovative_is_Our_Solution__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Innovative is Our Solution?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>