unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Often_Have_You_Had_to_Contact_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Often_Have_You_Had_to_Contact_Us__c</fullName>
    <label>How Often Have You Had to Contact Us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Twice</fullName>
            </value>
            <value>
                <fullName>Several Times</fullName>
            </value>
            <value>
                <fullName>Quite Often</fullName>
            </value>
            <value>
                <fullName>Very Often</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>