unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Quickly_Could_You_Reach_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Quickly_Could_You_Reach_Us__c</fullName>
    <inlineHelpText>5 means immediately or have not needed to contact, 1 means could not reach us.</inlineHelpText>
    <label>How Quickly Could You Reach Us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>