unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Quickly_Could_You_Reach_UsR__c.field-meta.xml
<CustomField>
    <fullName>How_Quickly_Could_You_Reach_UsR__c</fullName>
    <formula>VALUE(TEXT( How_Quickly_Could_You_Reach_Us__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Quickly Could You Reach Us?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>