unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Quickly_Was_the_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>How_Quickly_Was_the_Issue_Resolved__c</fullName>
    <inlineHelpText>5 means issue resolved immediately or there was no issue, 1 means not resolved.</inlineHelpText>
    <label>How Quickly Was the Issue Resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>