unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/How_Quickly_Was_the_Issue_ResolvedR__c.field-meta.xml
<CustomField>
    <fullName>How_Quickly_Was_the_Issue_ResolvedR__c</fullName>
    <formula>VALUE(TEXT( How_Quickly_Was_the_Issue_Resolved__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Quickly Was the Issue Resolved?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>