unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Identify_Missed_Revenue_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Identify_Missed_Revenue_Opportunities__c</fullName>
    <inlineHelpText>5 means strategy in place, 1 no strategy.</inlineHelpText>
    <label>Identify Missed Revenue Opportunities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>