unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Identify_Missed_Revenue_OpportunitiesR__c.field-meta.xml
<CustomField>
    <fullName>Identify_Missed_Revenue_OpportunitiesR__c</fullName>
    <formula>VALUE(TEXT( Identify_Missed_Revenue_Opportunities__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify Missed Revenue Opportunities?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>