unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/If_Not_Beneficial_Why__c.field-meta.xml
<CustomField>
    <fullName>If_Not_Beneficial_Why__c</fullName>
    <label>If Not Beneficial, Why?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>