unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Include_Tax_Free_in_the_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Include_Tax_Free_in_the_Sales_Process__c</fullName>
    <label>Include Tax Free in the Sales Process?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At the till during payment</fullName>
            </value>
            <value>
                <fullName>Upselling on Shop floor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>