unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Interested_in_a_Targeted_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_a_Targeted_Proposal__c</fullName>
    <inlineHelpText>Would you be interested in a targeted proposal on how we can improve this? 5 means very interested, 1 not interested at all.</inlineHelpText>
    <label>Interested in a Targeted Proposal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>