unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Interested_in_a_Targeted_ProposalR__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_a_Targeted_ProposalR__c</fullName>
    <formula>VALUE(TEXT( Interested_in_a_Targeted_Proposal__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interested in a Targeted Proposal?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>