unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Is_There_a_Recurring_Issue__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Recurring_Issue__c</fullName>
    <inlineHelpText>5 means no recurring issues, 1 frequent recurring issues.</inlineHelpText>
    <label>Is There a Recurring Issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>