unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Is_There_a_Recurring_IssueR__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Recurring_IssueR__c</fullName>
    <formula>VALUE(TEXT( Is_There_a_Recurring_Issue__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is There a Recurring Issue?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>