unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Issuing_Solution_Used__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Solution_Used__c</fullName>
    <label>Issuing Solution Used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDQ</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>