unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Joint_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Joint_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Marketing</label>
    <type>Checkbox</type>
</CustomField>