unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Key_Areas_That_Need_Improving__c.field-meta.xml
<CustomField>
    <fullName>Key_Areas_That_Need_Improving__c</fullName>
    <inlineHelpText>What are the key areas of our technology you feel need improving?</inlineHelpText>
    <label>Key Areas That Need Improving</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>