unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Logistic_Service__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Service__c</fullName>
    <inlineHelpText>How would you rate logisitc service (stock supply)?</inlineHelpText>
    <label>Logistic Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>