unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Logistic_ServiceR__c.field-meta.xml
<CustomField>
    <fullName>Logistic_ServiceR__c</fullName>
    <formula>VALUE(TEXT( Logistic_Service__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logistic Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>