unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Meeting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Frequency__c</fullName>
    <label>Meeting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>