unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Contact__c</fullName>
    <inlineHelpText>What method of contact do you use?</inlineHelpText>
    <label>Method of Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Never Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>