unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Other_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Other_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Initiative</label>
    <type>Checkbox</type>
</CustomField>