unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Outlook_For_The_Next_12_36_Months__c.field-meta.xml
<CustomField>
    <fullName>Outlook_For_The_Next_12_36_Months__c</fullName>
    <label>Outlook For The Next 12 - 36 Months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-10% to -5%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>0% to 5%</fullName>
            </value>
            <value>
                <fullName>5% to 10%</fullName>
            </value>
            <value>
                <fullName>Over 10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>