unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Outlook_For_The_Next_12_36_MonthsR__c.field-meta.xml
<CustomField>
    <fullName>Outlook_For_The_Next_12_36_MonthsR__c</fullName>
    <formula>IF(TEXT(Outlook_For_The_Next_12_36_Months__c) = &quot;-10% to -5%&quot;, 1,
IF(TEXT(Outlook_For_The_Next_12_36_Months__c) = &quot;0%&quot;, 2,
IF(TEXT(Outlook_For_The_Next_12_36_Months__c) = &quot;0% to 5%&quot;, 3,
IF(TEXT(Outlook_For_The_Next_12_36_Months__c) = &quot;5% to 10%&quot;, 4,
IF(TEXT(Outlook_For_The_Next_12_36_Months__c) = &quot;Over 10%&quot;, 5, 0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlook For The Next 12 - 36 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>