unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Pecent_of_Business_is_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Pecent_of_Business_is_Tax_Free__c</fullName>
    <inlineHelpText>What percent of revenue does your TF business represent?</inlineHelpText>
    <label>Pecent of Revenue is Tax Free</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>