unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>Percent Sales to Non-domestic Customers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>